--- a/admin/views/pages/login/index.jade
+++ b/admin/views/pages/login/index.jade
@@ -37,7 +37,8 @@ block content
                     a.small(href='forgot-password.html') Forgot Password?
                   .text-center
                     a.small(href='register.html') Create an Account!
-  script.
-    $('body').addClass('bg-gradient-primary');
+  block footer-scripts
+    script.
+      $('body').addClass('bg-gradient-primary');
 
 
