--- a/admin/views/layout/auth.jade
+++ b/admin/views/layout/auth.jade
@@ -11,11 +11,16 @@ html
 		link(href='https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i' rel='stylesheet')
 		link(href='css/sb-admin-2.min.css' rel='stylesheet')
 		link(rel='stylesheet', href='/admin/css/style.css')
-		script(src='vendor/jquery/jquery.min.js')
+
+		block head-stylesheet
+
 	body#page-top
 		#wrapper
 			block content
 
+		script(src='vendor/jquery/jquery.min.js')
 		script(src='vendor/bootstrap/js/bootstrap.bundle.min.js')
 		script(src='vendor/jquery-easing/jquery.easing.min.js')
 		script(src='js/sb-admin-2.min.js')
+
+		block footer-scripts
